modify example 3 to use new WES schema

--- a/examples/plant/wind_energy_system/IEA37_case_study_3_wind_energy_system.yaml
+++ b/examples/plant/wind_energy_system/IEA37_case_study_3_wind_energy_system.yaml
@@ -2,8 +2,9 @@ name: IEA Wind Task 37 Case study 3, 25WT Wind Farm
 site: !include ../plant_energy_site/IEA37_case_study_3_energy_site.yaml
 wind_farm: !include ../plant_wind_farm/IEA37_case_study_3_wind_farm.yaml
 attributes:
-  net_AEP: 938.57362950
   analyses:
+    flow_model:
+      name: foxes
     wake_model:
-      name: Bastankhah’s Gaussian wake model (simplified version) 
+      name: Bastankhah’s Gaussian wake model (simplified version)
       
