new WES schema: no outputs, add FLOW inputs

--- a/windIO/plant/wind_energy_system.yaml
+++ b/windIO/plant/wind_energy_system.yaml
@@ -27,19 +27,16 @@ properties:
     type: object
     properties:
       #~~
-      net_AEP:
-        title: Net AEP for the plant/site
-        unit: GWh
-        type: number
-      gross_AEP:
-        title: Gross AEP for the plant/site
-        unit: GWh
-        type: number
-      array_efficiency:
-        title: Wake array efficiency
-        type: number
-        minimum: 0
-        maximum: 1 # Define common decimal data type and refer.
+      flow_model:
+        title: Flow model
+        description: Flow model used in wind farm design
+        type: object
+        additionalProperties: true
+        properties:
+          name:
+            title: Flow model name
+            type: string
+            enum: ["foxes", "pywake", "saturne", "KUL"]
       analyses:
         wake_model:
           title: Wake model
@@ -50,89 +47,4 @@ properties:
             name:
               title: Wake model name
               type: string
-  optimisation:
-    design_variables:
-      title: List of design variables
-      description: Design variables of the system
-      type: object
-      properties:
-        layout:
-          name:
-            title: Array of design variables
-          $ref: "wind_farm/properties/layouts"
-        turbine_types:
-          name:
-            title: Wind turbine types installed
-          $ref: "wind_farm/properties/turbines"
-        number_turbines:
-          name:
-            title: Number of turbines installed
-        turbine_hub_heights:
-          name:
-            title: Hub heights of installed turbines
-
-    method:
-      title: Optimisation method
-      description: Optimisation method used for layout design
-      type: object
-      properties:
-        name:
-          title: Optimisation method name
-          type: string
-    constraints:
-      title: Optimisation constraints functions
-      description: List of constraint functions
-      type: object
-      properties:
-        minimum_spacing:
-          title: Minimum inter-turbine spacing
-          oneOf:
-            - ellipse:
-              title: Ellipse min. spacing constraint
-              properties:
-                major_axis:
-                  title: Spacing along the ellipse major axis
-                  type: number
-                minor_axis:
-                  title: Spacing along the ellipse minor axis
-                  type: number
-                orientation:
-                  title: Orientation angle of the ellipse
-                  type: number
-            - circle:
-              title: Circular min. spacing constraint
-              properties:
-                radius:
-                  title: Uniform spacing or radius of circle
-                  type: number
-        area_constraints:
-          title: Parcels and exclusion zones
-          parcels:
-            title: List of parcel polygons
-            $ref: "site.yaml#/properties/boundaries"  # Or refer to subset of user defined polygons in /site/
-          exclusion_zones:
-            title: List of exclusion zone polygons
-            $ref: "site.yaml#/properties/exclusions" # Or refer to subset of user defined polygons in /site/
-
-    initial_design:
-      Properties:
-        layout:
-          title: Initial layout
-          $ref: "wind_farm.yaml#/definition/layout"
-        turbine_types:  # Examples for future development
-          title: Initial turbine types
-        number_turbines:
-          title: Initial number turbines
-        turbine_hub_heights:
-          title: Initial turbine hub heights
-    final_design:
-      Properties:
-        layout:
-          title: Final layout
-          $ref: "wind_farm.yaml#/definition/layout"
-        turbine_types:  # Examples for future development
-          title: Final turbine types
-        number_turbines:
-          title: Final number turbines
-        turbine_hub_heights:
-          title: Final turbine hub heights
+              enum: ["Jensen", "Bastankhah"]
