use full timeseries example

--- a/examples/plant/plant_energy_resource/timeseries_netcdf.yaml
+++ b/examples/plant/plant_energy_resource/timeseries_netcdf.yaml
@@ -1,4 +1,4 @@
 name: Custom Energy Resource Case Study
 wind_resource:
-    timeseries: !includeTimeseriesNetCDF "first_three_times.nc"
+    timeseries: !includeTimeseriesNetCDF "HourlyVariation_atHubHeight.nc"
 
