--- a/examples/plant/wind_energy_system/flow_example_timeseries.yaml
+++ b/examples/plant/wind_energy_system/flow_example_timeseries.yaml
@@ -16,7 +16,7 @@ attributes:
     superposition_model:
       name: Squared
     rotor_averaging:
-      name: Center
+      name: avg_deficit
     outputs:
       AEP: True
       AEP_per_turbine: True
