support output options

--- a/examples/plant/wind_energy_system/flow_example_timeseries.yaml
+++ b/examples/plant/wind_energy_system/flow_example_timeseries.yaml
@@ -22,15 +22,14 @@ attributes:
     outputs:
       AEP: True
       AEP_per_turbine: True
+      name: timeseries-test-case
       power_percentiles:
           report: True
           percentiles: [5, 10, 50, 90, 95]
       flow_field:
-          directions: [260.0]
-          speeds: [5.311] 
+          time: [0]
           output_variables:  
             - velocity_u
-            - turbulence_intensity
       power_table:
           - 'power_per_turbine' 
 
