--- a/windIO/plant/energy_resource.yaml
+++ b/windIO/plant/energy_resource.yaml
@@ -177,6 +177,11 @@ definitions:
               type: number
       direction:
         type: number
+        oneOf:
+          - type: number
+          - type: array
+            items:
+              type: number
         description: Wind direction at the given time
       zs:
         type: array
