additional energy resource fields

--- a/windIO/plant/energy_resource.yaml
+++ b/windIO/plant/energy_resource.yaml
@@ -115,16 +115,25 @@ properties:
             title: atmoshpheric boundary layer height
             $ref: "common.yaml#/definitions/multi_dimensional_data"
         capping_inversion_thickness:
-            title: Capping inversion thickness
+            title: Capping inversion thickness in units of meters
             $ref: "common.yaml#/definitions/multi_dimensional_data"
         capping_inversion_strength:
-            title: capping inversion strength
+            title: capping inversion strength in units of Kelvin
             $ref: "common.yaml#/definitions/multi_dimensional_data"
         capping_inversion_height:
-            title: capping inversion height
+            title: capping inversion height in units of meters
             $ref: "common.yaml#/definitions/multi_dimensional_data"
         lapse_rate:
-            title: lapse rate
+            title: lapse rate in units of K/m
+            $ref: "common.yaml#/definitions/multi_dimensional_data"
+        fc:
+            title: Coriolis Parameter
+            $ref: "common.yaml#/definitions/multi_dimensional_data"
+        tau_x:
+            title: Sheer stress x
+            $ref: "common.yaml#/definitions/multi_dimensional_data"
+        tau_y:
+            title: Sheer stress y
             $ref: "common.yaml#/definitions/multi_dimensional_data"
 
 
