--- a/windIO/plant/outputs.yaml
+++ b/windIO/plant/outputs.yaml
@@ -26,34 +26,36 @@ properties:
       - x
       - u
     properties:
+      time:
+        title: Time
+        description: Timestamps for the data points
+        $ref: "common.yaml#/definitions/multi_dimensional_coordinate"
       x:
         title: X coordinate
         description: West-East coordinate
-        $ref: "common.yaml#/definitions/coordinates"
+        #$ref: "common.yaml#/definitions/coordinates"
+        $ref: "common.yaml#/definitions/multi_dimensional_coordinate"
       y:
         title: Y coordinate
         description: South-North coordinate
-        $ref: "common.yaml#/definitions/coordinates"
+        #$ref: "common.yaml#/definitions/coordinates"
+        $ref: "common.yaml#/definitions/multi_dimensional_coordinate"
       z:
         title: Z coordinate
         description: Vertical coordinate
-        type: number
-        units: m
+        $ref: "common.yaml#/definitions/multi_dimensional_coordinate"
       u:
         title: U velocity
-        description: Velocity in the x direction
-        type: number
-        units: m/s
+        description: Velocity in the x direction in m/s
+        $ref: "common.yaml#/definitions/multi_dimensional_data"
       v:
         title: V velocity
-        description: Velocity in the y direction
-        type: number
-        units: m/s
+        description: Velocity in the y direction in m/s
+        $ref: "common.yaml#/definitions/multi_dimensional_data"
       w:
         title: W velocity
-        description: Velocity in the z direction
-        type: number
-        units: m/s
+        description: Velocity in the z direction in m/s
+        $ref: "common.yaml#/definitions/multi_dimensional_data"
       pressure:
         title: Pressure
         description: Pressure field
